Changed to timeupdate fire if delta value is greater than kMinTimeupdateEventFrequency

PlaybackProgressTimer occasionally operates after a time less than 250ms.
(For example, 249.99 ms) In this case, since the comparison is made with
the maximum period value, the event may not occur. The next time a cyclic
event occurs, a timeupdate event occurs. (After about 500 ms)
The specification should be generated at intervals of at least 15-250ms,
so for periodic events it should be triggered if it is not the maximum
value but larger than the minimum value.

Bug: 796557
Change-Id: Ie960362959e26dfadfe2784bf58cd96db1def97c